5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1798_2562.log
== SUBMITION (2019-06-05 14:36:08) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

# Verifica se o programa vai terminar
while (size(vet) > 1):
   # Zera contador de elementos pares
   npar = 0
	nimpar = 0
   # Conta quantidade de elementos pares
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1
		else:
			nimpar = nimpar + 1

   # No. de elementos pares
   print(npar)

   # No. de elementos impares
   print(nimpar)

   # No. total de elementos
   print(size(vet))

   # Leitura do proximo vetor
   vet = array(eval(input("Proximo vetor: ")))

-- EXECUTION TIME:
0.844062
-- ERROR:
  File "/home/codebench/codes/1798/2562/main.py", line 10
    nimpar = 0
             ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:36:11) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
vet = array(eval(input("Primeiro vetor: ")))

# Verifica se o programa vai terminar
while (size(vet) > 1):
   # Zera contador de elementos pares
   npar = 0
	nimpar = 0
   # Conta quantidade de elementos pares
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1
		else:
			nimpar = nimpar + 1

   # No. de elementos pares
   print(npar)

   # No. de elementos impares
   print(nimpar)

   # No. total de elementos
   print(size(vet))

   # Leitura do proximo vetor
   vet = array(eval(input("Proximo vetor: ")))

-- ERROR:
File "XXXX", line 10
    nimpar = 0
             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:37:05) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))

while (size(vet) > 1):
   npar = 0
	nimpar = 0
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1
		else:
			nimpar = nimpar + 1
   print(npar)
   print(nimpar)
   print(size(vet))
   vet = array(eval(input("Proximo vetor: ")))

-- ERROR:
File "XXXX", line 6
    nimpar = 0
             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:37:42) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))

while (size(vet) > 1):
   npar = 0
	n = 0
   for elemento in vet:
      if (elemento % 2 == 0):
         npar = npar + 1
		else:
			n = n + 1
   print(npar)
   print(n)
   print(size(vet))
   vet = array(eval(input("Proximo vetor: ")))

-- ERROR:
File "XXXX", line 6
    n = 0
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:38:31) 
-- CODE:
from numpy import*

vet = array(eval(input("Primeiro vetor:")))

while (size(vet)>1):
	npar=0
	nimpar=0
	for elemento in vet:
		if (elemento%2==0):
		    npar= npar + 1
		else:
			nimpar= nimpar + 1
	print(npar)
	
	print(nimpar)
	
	print(size(vet))
	
	vet = array(eval(input("Primeiro vetor:")))

	
	
-- EXECUTION TIME:
1.05194
-- TEST CASE 1:
---- input:
[-2,-3,-5,-6,-7,-8,-9,-10]
[1,3,5,7,9,11,13,15,17,19,21]
[2,6,10,14,18,22]
[1]
---- correct output:
4
4
8
0
11
11
6
0
6

---- user output:
4
4
8
0
11
11
6
0
6
-- TEST CASE 2:
---- input:
[1,1,1,1,1,1,1,1,1,1,1,1,0]
[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1]
[2,8,16,32,64,128,256,512,1024,2048]
[1]
---- correct output:
1
12
13
16
1
17
10
0
10

---- user output:
1
12
13
16
1
17
10
0
10
-- TEST CASE 3:
---- input:
[-1,1,-2,2,-3,3,-4,4,-5,5,-6,6,-7,7,-8,8,-9,9]
[-200,100,-201,101]
[1]
---- correct output:
8
10
18
2
2
4

---- user output:
Primeiro vetor:8
10
18
Primeiro vetor:2
2
4
Primeiro vetor:
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 14:38:40) 
-- CODE:
from numpy import*

vet = array(eval(input("Primeiro vetor:")))

while (size(vet)>1):
	npar=0
	nimpar=0
	for elemento in vet:
		if (elemento%2==0):
		    npar= npar + 1
		else:
			nimpar= nimpar + 1
	print(npar)
	
	print(nimpar)
	
	print(size(vet))
	
	vet = array(eval(input("Primeiro vetor:")))

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 14:38:48) 
-- CODE:
from numpy import*

vet = array(eval(input("Primeiro vetor:")))

while (size(vet)>1):
	npar=0
	nimpar=0
	for elemento in vet:
		if (elemento%2==0):
		    npar= npar + 1
		else:
			nimpar= nimpar + 1
	print(npar)
	
	print(nimpar)
	
	print(size(vet))
	
	vet = array(eval(input("Primeiro vetor:")))

	
	
-- EXECUTION TIME:
0.984531
-- TEST CASE 1:
---- input:
[-2,-3,-5,-6,-7,-8,-9,-10]
[1,3,5,7,9,11,13,15,17,19,21]
[2,6,10,14,18,22]
[1]
---- correct output:
4
4
8
0
11
11
6
0
6

---- user output:
4
4
8
0
11
11
6
0
6
-- TEST CASE 2:
---- input:
[1,1,1,1,1,1,1,1,1,1,1,1,0]
[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1]
[2,8,16,32,64,128,256,512,1024,2048]
[1]
---- correct output:
1
12
13
16
1
17
10
0
10

---- user output:
1
12
13
16
1
17
10
0
10
-- TEST CASE 3:
---- input:
[-1,1,-2,2,-3,3,-4,4,-5,5,-6,6,-7,7,-8,8,-9,9]
[-200,100,-201,101]
[1]
---- correct output:
8
10
18
2
2
4

---- user output:
8
10
18
2
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
